# aware_sqlacodegen

./: .gitignore  README.md  README.rst  pyproject.toml
.github/workflows/: ci.yml
src/sqlacodegen/: cli.py  generators.py  models.py  utils.py
src/sqlacodegen/generator/: classes.py  functions.py  import_utils.py  main.py
src/sqlacodegen/generators/: aware.py  dataclasses.py  declarative.py  sqlmodels.py  tables.py
tests/: test_cli.py  test_generator_dataclass.py  test_generator_declarative.py  test_generator_sqlmodel.py  test_generator_tables.py
